cabal-version:      3.0
name:               oauth-api
version:            0.1.0.0
synopsis:           OAuth API Google
-- description:
homepage:           https://github.com/oauth-api
license:            BSD-3-Clause
license-file:       LICENSE
author:             Isaac Lopez
maintainer:         isaac.lopez@upr.edu
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable oauth-api
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
                    , servant
                    , aeson
                    , mtl
                    , wai
                    , warp
    hs-source-dirs:   src
    default-language: Haskell2010
