cabal-version:      3.0
name:               oauth-api
version:            0.1.0.0
synopsis:           OAuth API Google
-- description:
homepage:           https://github.com/oauth-api
license:            BSD-3-Clause
license-file:       LICENSE
author:             Isaac Lopez
maintainer:         isaac.lopez@upr.edu
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall -Werror -Wcompat -Widentities -Wincomplete-uni-patterns -Wincomplete-record-updates -Wno-unused-top-binds -Wno-orphans -Wno-error=unrecognised-warning-flags

library
    import:           warnings
    exposed-modules:
        Server
        Pages
        PagesCss
        Lucid.Htmx
        Configuration
        App
    default-extensions:
        DataKinds
        OverloadedStrings
        TypeOperators
        TypeApplications
        StandaloneDeriving
        DeriveFunctor
        DerivingVia
        GeneralizedNewtypeDeriving
        ImportQualifiedPost
    build-depends:    base ^>=4.17.2.1
                    , servant
                    , servant-server
                    , servant-lucid
                    , aeson
                    , lucid
                    , clay
                    , text
                    , wai
                    , warp
                    , mtl
                    , yaml
                    , directory
                    , http-conduit
    hs-source-dirs:   src
    default-language: Haskell2010

executable oauth-api
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.1
                    , oauth-api
    hs-source-dirs:   app
    default-language: Haskell2010
